# mv

./: .buildinfo  README.md  genindex.html  index.html  objects.inv  py-modindex.html  pyproject.toml  search.html  searchindex.js  setup.cfg  table_of_contents.html
.github/workflows/: ci.yml
_modules/: index.html
_modules/mv/: util.html
_modules/mv/wip/: live_qr_codes.html  video_transforms.html
_sources/: index.rst.txt  table_of_contents.rst.txt
_sources/module_docs/: mv.rst.txt
_sources/module_docs/mv/: util.rst.txt  wip.rst.txt
_sources/module_docs/mv/wip/: live_qr_codes.rst.txt  video_transforms.rst.txt
misc/: mv_wip.ipynb
module_docs/: mv.html
module_docs/mv/: util.html  wip.html
module_docs/mv/wip/: live_qr_codes.html  video_transforms.html
mv/: __init__.py  util.py
mv/examples/: README.md
mv/examples/media_recording/: README.md  media_recording_server.py
mv/examples/media_recording/static/: video_recorder.js
mv/experiments/: live_qr_codes.py
mv/wip/: __init__.py  live_qr_codes.py  video_transforms.py
mv/wip/record_video_from_phone/: server.py
mv/wip/record_video_from_phone/static/: audio_recorder.js  recorder.js
mv/wip/record_video_from_phone/templates/: audio_recorder.html  recorder.html  video_recorder.html
tests/: test_smoke.py
