[metadata]
name = mv
version = 0.0.3
url = https://github.com/thorwhalen/mv
platforms = any
description_file = README.md
description = Live video ML pipeline toolbox
license = mit
long_description = file:README.md
long_description_content_type = text/markdown
keywords = 
display_name = mv

[options]
packages = find:
include_package_data = True
zip_safe = False
install_requires = 
	opencv-python
	numpy

